modified the get time slots on different flitering criteria